# rust-network-mgr

./: CLAUDE.md  Cargo.toml  README.md
.cursor/: mcp.json
.github/workflows/: ci.yml
mcp-config/: claude_desktop_config.json
pkg-files/config/: default.yaml
pkg-files/systemd/: rust-network-mgr.service
src/: api.rs  cli.rs  config.rs  docker.rs  lib.rs  main.rs  mcp_server.rs  network.rs  nftables.rs  socket.rs  types.rs
tests/: basic_tests.rs  nftables_manager_tests.rs
