[package]
name = "rust-network-mgr"
authors = ["sparesparrow"]
version = "0.1.4"
edition = "2024"
description = "Linux based network management, packet routing and LAN peers IP monitoring service"
license-file = "LICENSE"
repository = "https://github.com/sparesparrow/rust-network-mgr"
readme = "README.md"

[lib]
name = "rust_network_mgr"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2024"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[dependencies]
rtnetlink = "0.16.0"        # Provides safe bindings for Linux Netlink (core for monitoring)
netlink-packet-core = "^0.7.0"  # Core netlink packet definitions
netlink-packet-route = "^0.22.0" # Route-specific netlink packet definitions (Align with rtnetlink 0.16.0)

nix = { version = "^0.27.1", features = ["net"] } # Added "net" feature for socket options if needed later
tokio = { version = "^1.32.0", features = ["full"] } # Async runtime

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9.25"       # For parsing YAML configuration files

# Remove explicit features again, rely on dep:nftnl in [features] table
nftnl = { version = "^0.7.0"} # Use latest published version

# Error handling and logging
thiserror = "^1.0.48"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter", "fmt"] } # Added fmt feature for basic logging

# For socket path
directories = "^5.0" # Useful for finding runtime directories like /run
anyhow = "^1.0" # General purpose error handling, useful alongside thiserror
futures = "^0.3" # For stream handling with rtnetlink
tempfile = "3.10.1" # Updated tempfile version

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add dev-dependencies for tests if necessary, e.g.:
# [dev-dependencies]
# rand = "0.8"
